<resources>
    <string name="app_name">PlEfInd</string>

    <string name="APPLICATION_ID">3F1B428C-1B01-3E02-FFA8-7B9963771A00</string>
    <string name="API_KEY">5BE5B77F-1FAA-4ED9-86F5-164398C20672</string>
    <string name="SERVER_URL">https://api.backendless.com</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>


    <string name="title_section1">Overview</string>
    <string name="title_section2">Services</string>
    <string name="title_section3">Data</string>
    <string name="title_section4">Test</string>"

    <string name="overview_temperature">Temperature (°C)</string>
    <string name="title_activity_basic_ble">BasicBLEActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="bonded_state">bonded</string>
    <string name="bonding_state">bonding</string>

    <string name="status_disconnected">disconnected</string>
    <string name="status_connecting">connecting...</string>
    <string name="status_connected">gatt connected</string>
    <string name="status_discovered">gatt connected, services discovered</string>
    <string name="status_chat_available">Data available</string>
    <string name="status_sps_available">sps available</string>
    <string name="status_fifo_unavailable">fifo characteristc not found!</string>
    <string name="status_fifo_credits_unavailable">credits and/or fifo characteristcs not found!</string>
    <string name="not_available">N/A</string>
    <string name="button_start">Start</string>
    <string name="logs_tittle">Logs</string>
    <string name="ip_address_tittle">IP Address</string>
    <string name="port_tittle">Port</string>
    <string name="port_hint">servers port</string>
    <string name="remote_start_button">Stop</string>
    <string name="remote_stop_button">Start</string>

    <string-array name="conn_prio">
        <item>BALANCED</item>
        <item>HIGH</item>
        <item>LOW POWER</item>
    </string-array>
    <string name="location_permission_toast">Location required to scan for low energy devices!</string>
    <string name="storage_permission_toast">Permission is required to save a file!</string>
    <string name="storage_permission_read_toast">Permission is required to read a file!</string>

    <string name="wait">CONNECTING</string>
    <string name="reset">PLEASE RESET THE DEVICE</string>
    <string name="continue_txt">CONTINUE</string>

    <string name="diagnosis_prompt">Diagnosis code</string>
    <string-array name="diagnosis_arrays">
        <item>J90</item>
        <item>J91</item>
        <item>J92</item>
        <item>J93</item>
        <item>J94</item>
        <item>Others (please note)</item>
    </string-array>
</resources>
