<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.ublox.OLP425.activities.AboutActivity">

    <LinearLayout
        android:padding="32dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PLEfind" />

        <TextView
            android:layout_marginTop="50dp"
            android:textColor="@color/ublox_blue_color"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="About us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:text="SensoriumLab "
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bVisit"
            android:textColor="@color/ublox_blue_color"
            android:layout_marginTop="64dp"
            android:text="VISIT US AT SensoriumLab.com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</ScrollView>
