...
    android:background="#FDF5E3"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="com.ublox.BLE_med.activities.DevicesActivity">

    <ListView
        android:id="@+id/lvDevices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:visibility="gone">

    </ListView>
...
